manifests/virt/ocpvirt-subscription.yaml
# OpenShift Virtualization Operator
#
# Install from the certified Red Hat operator catalog.
---
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-cnv
